[workspace]
resolver = "2"
members = ["sanctum-lst-list", "tojup"]

[workspace.dependencies]
borsh = "^0.9"
clap = { version = "^4", features = ["derive"] }
csv = "^1"
lazy_static = "^1"
mpl-token-metadata = "^4"
reqwest = "^0.11"
sanctum-macros = "^1"
serde = { version = "^1", features = ["derive"] }
serde_with = "^3"
solana-client = "~2.0"
solana-program = "~2.0"
solana-sdk = "~2.0"
spl_stake_pool_interface = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "266d745c4d6d66041030d8315fcea41a916680fd" }
spl-token-2022 = "5.0.2"
tokio = "^1"
toml = ">=0.1"

# workspace members
sanctum-lst-list = { path = "./sanctum-lst-list" }
